--- a/src/scss/_products.scss
+++ b/src/scss/_products.scss
@@ -18,13 +18,14 @@
     flex-direction: column;
     align-items: center;
     height: auto;
-    width: 90%;
-    margin: 10px;
-    margin-left: 30px;
-    margin-right: 30px;
+    width: 100%;
+    text-align: center;
 
     @include mixins.tablet {
       width: 45%;
+      margin: 10px;
+      margin-left: 30px;
+      margin-right: 30px;
     }
 
     .img-container {
@@ -123,19 +124,4 @@
   font-size: 1.5em;
 
   text-align: center;
-}
-
-#cart-total {
-  font-size: 0.5em;
-  color: #fff;
-  background: var.$primarycolor;
-  border-radius: 50%;
-  padding: 0 5px;
-  position: relative;
-  left: -8px;
-  top: -10px;
-  opacity: 0.9;
-  font-style: normal;
-  width: 15px;
-  height: 15px;
 }
